--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -69,6 +69,28 @@
           ]
         }
       ]
+    },
+    "S3Trigger28a3106b": {
+      "service": "Lambda",
+      "providerPlugin": "awscloudformation",
+      "build": true
+    }
+  },
+  "storage": {
+    "asadTodotestingBucket": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "S3Trigger28a3106b",
+          "attributes": [
+            "Name",
+            "Arn",
+            "LambdaExecutionRole"
+          ]
+        }
+      ]
     }
   }
 }
