S3 also integrated and working

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -73,7 +73,16 @@
     "S3Trigger28a3106b": {
       "service": "Lambda",
       "providerPlugin": "awscloudformation",
-      "build": true
+      "build": true,
+      "dependsOn": [
+        {
+          "category": "api",
+          "resourceName": "asadtodo",
+          "attributes": [
+            "GraphQLAPIIdOutput"
+          ]
+        }
+      ]
     }
   },
   "storage": {
